# project_model_based_fmri

./: .gitignore  .readthedocs.yml  README.md  pyproject.toml  requirements.txt  setup.py  setup_wo_poetry.py
design/: issue.md
docs/: Makefile  apidoc.sh  make.sh
docs/source/: conf.py  dev-guide.rst  get_started.md  index.rst  mbfmri.core.glm.rst  mbfmri.core.mvpa.rst  mbfmri.core.rst  mbfmri.data.rst  mbfmri.models.rst  mbfmri.preprocessing.computational_modeling.rst  mbfmri.preprocessing.rst  mbfmri.rst  mbfmri.utils.coef2map.rst  mbfmri.utils.explainer.rst  mbfmri.utils.extdata.rst  mbfmri.utils.report.rst  mbfmri.utils.rst  mbmvpa.conf.rst  mbmvpa.core.engine.rst  mbmvpa.core.rst  mbmvpa.data.loader.rst  mbmvpa.data.rst  mbmvpa.data.tf_generator.rst  mbmvpa.models.elasticnet.rst  mbmvpa.models.mvpa_general.rst  mbmvpa.models.rst  mbmvpa.models.tf_cnn.rst  mbmvpa.models.tf_mlp.rst  mbmvpa.models.tf_mlp_shap.rst  mbmvpa.preprocessing.bold.rst  mbmvpa.preprocessing.computational_modeling.bandit2arm_delta.rst  mbmvpa.preprocessing.computational_modeling.bandit4arm2_kalman_filter.rst  mbmvpa.preprocessing.computational_modeling.bandit4arm_2par_lapse.rst  mbmvpa.preprocessing.computational_modeling.bandit4arm_4par.rst  mbmvpa.preprocessing.computational_modeling.bandit4arm_lapse.rst  mbmvpa.preprocessing.computational_modeling.bandit4arm_lapse_decay.rst  mbmvpa.preprocessing.computational_modeling.bandit4arm_singleA_lapse.rst  mbmvpa.preprocessing.computational_modeling.bart_ewmv.rst  mbmvpa.preprocessing.computational_modeling.bart_par4.rst  mbmvpa.preprocessing.computational_modeling.cgt_cm.rst  (+55 more)
examples/: 1stlevel_analysis.ipynb  classification_fmri.ipynb  config.py  fmriprep.sh  latent_process.ipynb  make_temp_data.py  model_based_1stlevel_analysis.ipynb  model_based_first_level_analysis_sample.ipynb  mvpa_model_Based.ipynb
examples/Delayed-discount_task/: example.ipynb
examples/Mixed-gambles_task/: example.ipynb  glm_model_based.ipynb  glm_model_based_using_nilearn.ipynb  glm_model_using_nilearn.ipynb  (+10 more)
examples2/: dd_hyperbolic_params.tsv  dd_latent_state.ipynb  fmriprep.sh  scratch.ipynb
images/: README.md
mbfmri/: __init__.py  conf.py
mbmvpa/: __init__.py  conf.py  index.rst
model_based_mvpa/: __init__.py  setup.py
test/: check_prepdata.ipynb  dd_example.py  dd_example_v2.py  dd_hyperbolic_latent.tsv  test_bids_preprocess.py  test_dd.ipynb
tests/: example_test_legacy.py  example_tom.py  test-base.py  test-cnn_tf.py  test-elasticnet.py  test-event-process.py  test-fmri-process.py  test-glm.py  test-latentfunction.py  test-loader.py  test-mlp_tf.py  test-model.py  test-preprocess.py  test-save_indivparams.py  test.py  test_keras_explain.ipynb  test_latent_process.ipynb  test_prep_plot.ipynb  test_trial_est.py
tutorials/: fulldata_test_prl_elasticnet.py  fulldata_test_prl_firstlevel.py  fulldata_test_prl_mlp.py  fulldata_test_prl_mlp_shap.py  sample_run.py  test_glm.ipynb  test_oneshot.py  tutorial-prl-glm.py  tutorial.ipynb  tutorial.py  tutorial_0.ipynb  tutorial_1.ipynb  tutorial_2.ipynb  tutorial_3.ipynb  tutorial_4.ipynb  tutorial_cnn.ipynb  tutorial_cnn.py  tutorial_elasticnet.ipynb  tutorial_elasticnet_crossvalidation.py  tutorial_elasticnet_dd.ipynb  tutorial_elasticnet_dd.py  tutorial_elasticnet_prl.ipynb  tutorial_elasticnet_prl.py  tutorial_mlp.ipynb  tutorial_mlp.py  tutorial_oneshot_prl_rpe.py  tutorial_only_cnn_prl_rpe.py  tutorial_only_elasticnet_dd.py  tutorial_only_elasticnet_prl.py  tutorial_only_elasticnet_prl_absrpe.py  tutorial_only_elasticnet_prl_rpe.py  tutorial_only_elasticnet_prospect.py  tutorial_only_mlp_dd.py  tutorial_only_mlp_prl_rpe.py  tutorial_only_mlp_prospect.py  tutorial_only_mlplogit_prl.py  tutorial_preprocessing_dd.py  tutorial_preprocessing_prl.py  tutorial_preprocessing_prl_absrpe.py  tutorial_preprocessing_prl_rpe.py  (+8 more)
(+379 files in other folders)
