[tool.poetry]
name = "model_based_fmri"
version = "0.0.3"
description = "Python library for general model-based fMRI analysis"
license = "GPL-3.0"
authors = [
  "Yedarm Seong <mybirth0407@gmail.com>",
  "Cheol Jun Cho <cjfwndnsl@gmail.com>",
  "CCS-Lab <ccsl.snu@gmail.com>"
]
readme = "README.md"
repository = "https://github.com/CCS-Lab/project_model_based_fmri"
classifiers = [
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering"
]

[tool.poetry.dependencies]
python = ">=3.6.1"
hbayesdm = "<=1.0.1"
nibabel = "^3.2.0"
nilearn = "^0.7.0"
glmnet = "^2.2.1"
pystan = "^2.19.1"
bids = "^0.0"
scikit-image = "^0.17.2"
matplotlib = "^3.3.3"
tensorflow = "^2.4.0"
numpy = "^1.19.5"
pandas = "^1.1.4"
scikit-learn = "^0.24"
scipy = "^1.5.4"
tqdm = ">=4.0.0"
statsmodels = "^0.12.2"
PyYaml = "^5.4.1"
arviz = "^0.11.0"
shap = "^0.39.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"
jupyterlab = "^2.2.9"
jupyter = "^1.0.0"
pylint = "^2.6.0"
pytest = "^6.1.2"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Extra packages for testing
pytest = { version = ">=6.0", optional = true }
pytest-cov = { version = "*", optional = true }
codecov = { version = "*", optional = true }

# Extra packages for documentation
sphinx = { version = "*", optional = true }
sphinx_rtd_theme = { version = "*", optional = true }
sphinx-autobuild = { version = "*", optional = true }
recommonmark = { version = "*", optional = true }
sphinx-issues = { version = "^1.2.0", optional = true }
ipykernel = { version = "^5.3.4", optional = true }
nbsphinx = { version = "^0.8.0", optional = true }
matplotlib = { version = "^3.3.3", optional = true }
jupyterlab = { version = "^2.2.9", optional = true }
